welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:5: error: not found: value compteru
      compteur = compteru +1
                 ^